--- a/styles/project.css
+++ b/styles/project.css
@@ -30,8 +30,9 @@ header h2 {
 }
 header img {
     float: left;
+    margin: left 2em;
 }
-.shadow{
+.shadow {
     text-shadow: 2px 2px 2px rgb(128, 0, 0);
 }
 article {
@@ -43,7 +44,7 @@ article {
     column-gap: 2em;
     margin-left: 2em;
 }
-article h3{
+article h3 {
     column-span: all
 }
 article img {
@@ -60,9 +61,10 @@ article p::first-letter {
 aside {
     width: 20%;
     float: right;
-    background-color: pink
+    background-color: pink;
+    padding: 20px;
 }
-footer{
+footer {
     clear: both;
     border-top: 2px solid aqua;  
 }
@@ -77,4 +79,5 @@ p.fixed {
     right: 0;
     border: 3px solid fuchsia;
     background-color: lightcoral;
+    padding-bottom: 20px 1.5em;
 }
