--- a/styles/project.css
+++ b/styles/project.css
@@ -27,6 +27,8 @@ header h2 {
     font-size: 130%;
     color: #800000;
     text-indent: 30px;
+    clear: both;
+    border-top: 2px solid aqua;
 }
 header img {
     float: left;
