--- a/styles/project.css
+++ b/styles/project.css
@@ -20,12 +20,12 @@ a:focus, a:hover {
 }
 header h1 {
     font-size: 175%;
-    color: maroon;
+    color: hotpink;
     text-indent: 30px;
 }
 header h2 {
     font-size: 130%;
-    color: #800000;
+    color: hotpink;
     text-indent: 30px;
 
 }
