--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,3 +1,12 @@
+<nav id="nav_menu">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="project4.html">Project A</a></li> 
+        <li><a href="menu.html" class="current">Project B</a></li> 
+        <li><a href="idk" class="lastitem">About Us</a></li>
+    </ul>
+</nav>
+
 #nav_menu ul { list-style-type: none; }
 #nav_menu ul li { float: left; }
 #nav_menu ul li a {
