--- a/styles/exam.css
+++ b/styles/exam.css
@@ -84,7 +84,7 @@ aside {
     bottom: 20%;
     right: 0;
     border: 3px solid fuchsia;
-    background-color: lightcoral;
+    background-color: lightpink;
     padding: 20px;
 }
 
