--- a/styles/exam.css
+++ b/styles/exam.css
@@ -79,7 +79,7 @@ article .wrap-text {
 
 /* Aside styles */
 aside {
-    width: auto;
+    width: 20%;
     position: fixed;
     bottom: 20%;
     right: 0;
