--- a/styles/exam.css
+++ b/styles/exam.css
@@ -14,12 +14,15 @@
 #nav_menu ul li a.current { color: yellow; }
 /* Global styles */
 body {
-    font-family: 'Arial', sans-serif;
-    font-size: 16px;
-    line-height: 1.6;
-    color: #e735c1;
-    width: 95%;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 100%;
+    width: 90%;
+    background-color: white;
     margin: 15px auto;
+    padding: 15px 1.5em;
+    border: 1px solid black;
+    border-radius: 25px;
+    box-shadow: 5px 5px 0 0;
 }
 
 html {
