--- a/styles/exam.css
+++ b/styles/exam.css
@@ -13,6 +13,10 @@
 #nav_menu ul li a.lastitem { border-right: none; }	
 #nav_menu ul li a.current { color: yellow; }
 /* Global styles */
+header {
+    clear: both;
+    border-bottom: 2px solid aqua;   
+}
 body {
     font-family:Arial, Helvetica, sans-serif;
     font-size: 100%;
@@ -104,10 +108,7 @@ aside ul {
 /* Footer styles */
 footer {
     clear: both;
-    text-align: center;
-    padding: 10px;
-    background-color: #b569ef;
-    color: lightpink;
+    border-top: 2px solid aqua;  
 }
 
 /* Lines as shown in the screenshot */
