--- a/styles/exam.css
+++ b/styles/exam.css
@@ -15,7 +15,7 @@
 /* Global styles */
 #nav_menu {
     clear: both;
-    border-bottom: 2px solid aqua;   
+    border-top: 2px solid aqua;   
 }
 body {
     font-family:Arial, Helvetica, sans-serif;
