--- a/styles/exam.css
+++ b/styles/exam.css
@@ -13,7 +13,7 @@
 #nav_menu ul li a.lastitem { border-right: none; }	
 #nav_menu ul li a.current { color: yellow; }
 /* Global styles */
-Header {
+Head {
     clear: both;
     border-top: 2px solid aqua;   
 }
