--- a/styles/exam.css
+++ b/styles/exam.css
@@ -115,7 +115,7 @@ footer p.copyright {
     font-size: 80%;
 }
 
-footer a._blank {
+footer a.https://www.linkedin.com/in/emily-valladares-58821a226 {
     text-align: center;
     font-size: 80%;
 }
