--- a/styles/exam.css
+++ b/styles/exam.css
@@ -95,7 +95,7 @@ aside {
     width: 20%;
     position: fixed;
     bottom: 20%;
-    float: right;
+    float: left;
     border: 3px solid fuchsia;
     background-color: lightpink;
     padding: 20px;
