--- a/styles/exam.css
+++ b/styles/exam.css
@@ -29,7 +29,7 @@ body {
 }
 
 html {
-    background-image: linear-gradient(to left, white 0%, rgb(232, 157, 232) (122, 122, 248) 100%);
+    background-image: linear-gradient(to left, white 0%, rgb(249, 138, 249) 100%);
 }
 
 /* Menu bar styles */
