--- a/styles/exam.css
+++ b/styles/exam.css
@@ -14,7 +14,7 @@
 #nav_menu ul li a.current { color: yellow; }
 /* Global styles */
 #nav_menu {
-    border-top: 2px solid aqua; 
+    border-bottom: 2px solid aqua; 
 }
 body {
     font-family:Arial, Helvetica, sans-serif;
