--- a/styles/exam.css
+++ b/styles/exam.css
@@ -13,17 +13,15 @@
 #nav_menu ul li a.lastitem { border-right: none; }	
 #nav_menu ul li a.current { color: yellow; }
 /* Global styles */
-#nav_menu {
-    border-bottom: 2px solid aqua;
+
+title {
+    border-top: 2px solid aqua;
     height: 100%; /* Set height to 100% */
     margin-bottom: 0; /* Reset margin */
     padding-bottom: 0; /* Reset padding */
 }
 
-nav ul {
-    margin-bottom: 0; /* Reset margin */
-    padding-bottom: 0; /* Reset padding */
-}
+
 body {
     font-family:Arial, Helvetica, sans-serif;
     font-size: 100%;
