--- a/styles/exam.css
+++ b/styles/exam.css
@@ -100,7 +100,7 @@ aside {
     width: 20%;
     position: fixed;
     bottom: 20%;
-    right: 10%;
+    right: 0;
     border: 3px solid fuchsia;
     background-color: lightpink;
     padding: 20px;
