--- a/styles/rwd.css
+++ b/styles/rwd.css
@@ -111,7 +111,7 @@ html, body {
     }
     footer {
         clear: both; 
-        border-top: 2px solid #00baf0;
+        border-top: 2px solid #ea1b8d;
         text-align: center;
         font-size: .8em;
     }
